Fix #48 topic block titles not wrapping when out of edit mode

--- a/less/course.less
+++ b/less/course.less
@@ -4,6 +4,9 @@ div#region-main {
     .course-content {
         ul.topics,
         ul.weeks {
+            h3.sectionname {
+                white-space: normal;
+            }
             li.section {
                 .content {
                     margin-left: 40px;
